crates/ink/tests/ui/contract/fail/trait-message-selector-overlap-3.stderr
error[E0119]: conflicting implementations of trait `ink::reflect::DispatchableMessageInfo<42>` for type `contract::Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-3.rs:41:9
   |
36 |         fn message1(&self) {}
   |         -- first implementation here
...
41 |         fn message2(&self) {}
   |         ^^ conflicting implementation for `contract::Contract`

error[E0119]: conflicting implementations of trait `ink::codegen::TraitCallForwarderFor<42>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-3.rs:39:5
   |
34 |     impl TraitDefinition1 for Contract {
   |     ---- first implementation here
...
39 |     impl TraitDefinition2 for Contract {
   |     ^^^^ conflicting implementation for `contract::_::CallBuilder`
